apps/traefik/kustomization/jellyfin-tls.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-forwarded-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Port: "443"
      X-Forwarded-Host: "jf.yiannis.io"
