apps/traefik/kustomization/gateway-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
  labels:
    exposure: private
spec:
  gatewayClassName: traefik
  listeners:
  - name: web-home
    protocol: HTTP
    port: 8000
    hostname: home.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-home
    protocol: HTTPS
    port: 8443
    hostname: home.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-photos
    protocol: HTTP
    port: 8000
    hostname: photos.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-photos
    protocol: HTTPS
    port: 8443
    hostname: photos.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-speed
    protocol: HTTP
    port: 8000
    hostname: speed.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-speed
    protocol: HTTPS
    port: 8443
    hostname: speed.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-docs
    protocol: HTTP
    port: 8000
    hostname: docs.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-docs
    protocol: HTTPS
    port: 8443
    hostname: docs.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-gfn
    protocol: HTTP
    port: 8000
    hostname: gfn.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-gfn
    protocol: HTTPS
    port: 8443
    hostname: gfn.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-demandeur
    protocol: HTTP
    port: 8000
    hostname: demandeur.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-demandeur
    protocol: HTTPS
    port: 8443
    hostname: demandeur.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-prw
    protocol: HTTP
    port: 8000
    hostname: prw.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-prw
    protocol: HTTPS
    port: 8443
    hostname: prw.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-qb
    protocol: HTTP
    port: 8000
    hostname: qb.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-qb
    protocol: HTTPS
    port: 8443
    hostname: qb.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-rdr
    protocol: HTTP
    port: 8000
    hostname: rdr.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-rdr
    protocol: HTTPS
    port: 8443
    hostname: rdr.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-snr
    protocol: HTTP
    port: 8000
    hostname: snr.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-snr
    protocol: HTTPS
    port: 8443
    hostname: snr.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-jf
    protocol: HTTP
    port: 8000
    hostname: jf.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-jf
    protocol: HTTPS
    port: 8443
    hostname: jf.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-reg
    protocol: HTTP
    port: 8000
    hostname: reg.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-reg
    protocol: HTTPS
    port: 8443
    hostname: reg.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-authentik
    protocol: HTTP
    port: 8000
    hostname: authentik.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-authentik
    protocol: HTTPS
    port: 8443
    hostname: authentik.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-tf
    protocol: HTTP
    port: 8000
    hostname: tf.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-tf
    protocol: HTTPS
    port: 8443
    hostname: tf.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: web-argocd
    protocol: HTTP
    port: 8000
    hostname: argocd.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
  - name: websecure-argocd
    protocol: HTTPS
    port: 8443
    hostname: argocd.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: private
