apps/traefik/kustomization/gateway-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  labels:
    exposure: public
spec:
  gatewayClassName: traefik
  listeners:
  - name: web-dashboard
    protocol: HTTP
    port: 8000
    hostname: dashboard.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: public
  - name: websecure-dashboard
    protocol: HTTPS
    port: 8443
    hostname: dashboard.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: public
  - name: web-gitea
    protocol: HTTP
    port: 8000
    hostname: gitea.yiannis.io
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: public
  - name: websecure-gitea
    protocol: HTTPS
    port: 8443
    hostname: gitea.yiannis.io
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: traefik-wildcard-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: public
