apps/traefik/kustomization/ingressroute-dashboard-private.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-private
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Traefik
    gethomepage.dev/href: "https://tf.yiannis.io/dashboard/"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/name: traefik
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/widget.type: "traefik"
    gethomepage.dev/widget.url: "https://tf.yiannis.io"
spec:
  entryPoints:
  - websecure
  tls:
    secretName: traefik-wildcard-tls
  routes:
  - match: Host(`tf.yiannis.io`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
